--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <h2>Recent News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2023.</td></tr>
 		<tr><td>Selected into “Yang Fan Plan” of Shanghai, 2023.</td></tr>
@@ -409,7 +410,7 @@
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising <font color="red">【New】</font></a><br>
-		Juncheng Li, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
+		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
 		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2023. <br>
 		<a href="", target="_blank">[Paper]</a>
 		</td>
@@ -477,6 +478,22 @@
 
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/MDCN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
+		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
+        <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
+		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
+		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/LPNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
@@ -527,28 +544,29 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/MDCN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
-		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-        <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
-		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[Homepage]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
 </tbody></table>
 
 
 
 <h4>Selected Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
+		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
+		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
+		<font color="red">Top computer vision conference.</font><br>
+		<a href="paper/CVPR.pdf", target="_blank">[Paper]</a>
+		<a href="", target="_blank">[Poster]</a>
+		<a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -617,23 +635,6 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
-		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
-		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
-		<font color="red">Top computer vision conference.</font><br>
-		<a href="paper/CVPR.pdf", target="_blank">[Paper]</a>
-		<a href="", target="_blank">[Poster]</a>
-		<a href="", target="_blank">[Code]</a>
-		</td>
-	</tr>
-	<tr></tr>
-	<tr></tr>
 	<tr></tr>
 
 	<tr>	
@@ -719,7 +720,7 @@
 </tbody></table>
 
 
-<h4>Selected Challenge Reports</h4>
+<!-- <h4>Selected Challenge Reports</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -756,7 +757,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
- </tbody></table>
+ </tbody></table> -->
 
 
 <h2>Academic Services</h2>
@@ -848,6 +849,9 @@
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
 		</tr>
 		<tr>
+			<td> Computers in Biology and Medicine (CIBM)</td>
+		</tr>
+		<tr>
 			<td> Information Science (INS)</td>
 		</tr>
 		<tr>
@@ -873,13 +877,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+		</tr>
+		<tr>
 			<td> European Conference on Computer Vision (ECCV)</td>
 		</tr>
 		<tr>
 			<td> International Conference on Computer Vision (ICCV)</td>
 		</tr>
 		<tr>
-			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+			<td> International Joint Conference on Artificial Intelligence (IJCAI)</td>
 		</tr>
 		<!-- <tr>
 			<td> Advances in Image Manipulation workshop and challenges (AIM)</td>
@@ -888,7 +895,7 @@
 			<td> New Trends in Image Restoration and Enhancement workshop
 				and challenges on image and video processing (NTIRE)</td>
 		</tr> -->
-		<tr>
+		<!-- <tr>
 			<td> IEEE International Conference on Multimedia & Expo (ICME)</td>
 		</tr>
 		<tr>
@@ -899,7 +906,7 @@
 		</tr>
 		<tr>
 			<td>International Conference on Pattern Recognition (ICPR)</td>
-		</tr>
+		</tr> -->
 		<tr>
 			<td> ...</td>
 		</tr>
@@ -1044,7 +1051,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2024-2
+&copy; Juncheng Li | Last updated: 2024-5
 </center>
 </p>
 
