--- a/index_zw.html
+++ b/index_zw.html
@@ -68,6 +68,7 @@
 <h2>近期新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2023.</td></tr>
 		<tr><td>入选上海市青年科技英才”扬帆计划“, 2023.</td></tr>
@@ -396,7 +397,7 @@
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising <font color="red">【最新】</font></a><br>
-		Juncheng Li, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
+		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
 		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2023. <br>
 		<a href="", target="_blank">[论文]</a>
 		</td>
@@ -462,6 +463,22 @@
     <tr></tr>
 	<tr></tr>
 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/MDCN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
+		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
+		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
+        <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[主页]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>	
+
 	 <tr>	
 		<td width="206">
 		<img src="./indexpics/LPNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -512,26 +529,27 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-
-    <tr>	
-		<td width="206">
-		<img src="./indexpics/MDCN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
-		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-        <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
-		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[主页]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>	
 </tbody></table>
 
 <h4>精选会议论文</h4></table>
 <table id="tbPublications" width="100%">
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
+		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
+		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
+		<font color="red">计算机顶级会议</font><br>
+		<a href="paper/CVPR.pdf", target="_blank">[论文]</a>
+		<a href="", target="_blank">[海报]</a>
+		<a href="", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -597,23 +615,6 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
-		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
-		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
-		<font color="red">计算机顶级会议</font><br>
-		<a href="paper/CVPR.pdf", target="_blank">[论文]</a>
-		<a href="", target="_blank">[海报]</a>
-		<a href="", target="_blank">[代码]</a>
-		</td>
-	</tr>
-	<tr></tr>
-	<tr></tr>
 	<tr></tr>
 
 	<tr>	
@@ -699,7 +700,7 @@
 </tbody></table>
 
 
-<h4>精选比赛报告</h4>
+<!-- <h4>精选比赛报告</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 
@@ -737,7 +738,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
- </tbody></table>
+ </tbody></table> -->
 
 
 <h2>学术服务</h2>
@@ -829,6 +830,9 @@
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
 		</tr>
 		<tr>
+			<td> Computers in Biology and Medicine (CIBM)</td>
+		</tr>
+		<tr>
 			<td> Information Science (INS)</td>
 		</tr>
 		<tr>
@@ -854,16 +858,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+		</tr>
+		<tr>
 			<td> European Conference on Computer Vision (ECCV)</td>
 		</tr>
 		<tr>
 			<td> International Conference on Computer Vision (ICCV)</td>
 		</tr>
 		<tr>
-			<td> Conference on Computer Vision and Pattern Recognition (CVPR)</td>
-		</tr>
-		<tr>
-			<td> European Conference on Computer Vision (ECCV)</td>
+			<td> International Joint Conference on Artificial Intelligence (IJCAI)</td>
 		</tr>
 		<!-- <tr>
 			<td> Advances in Image Manipulation workshop and challenges (AIM)</td>
@@ -871,7 +875,7 @@
 		<tr>
 			<td> New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE)</td>
 		</tr> -->
-		<tr>
+		<!-- <tr>
 			<td> IEEE International Conference on Multimedia & Expo (ICME)</td>
 		</tr>
 		<tr>
@@ -882,7 +886,7 @@
 		</tr>
 		<tr>
 			<td>International Conference on Pattern Recognition (ICPR)</td>
-		</tr>
+		</tr> -->
 		<tr>
 			<td> ...</td>
 		</tr>
@@ -1026,7 +1030,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2024-2
+&copy; 李俊诚 | 最后更新: 2024-5
 </center>
 </p>
 
