--- a/index.html
+++ b/index.html
@@ -849,6 +849,9 @@
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
 		</tr>
 		<tr>
+			<td> IEEE Journal of Biomedical and Health Informatics (JBHI)</td>
+		</tr>
+		<tr>
 			<td> Computers in Biology and Medicine (CIBM)</td>
 		</tr>
 		<tr>
