--- a/index_zw.html
+++ b/index_zw.html
@@ -121,6 +121,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 MICCAI, 2024.</td></tr>
 		<tr><td>一篇论文已被 Neural Networks, 2024.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 ACM Computing Surveys, 2024.</td></tr> 
@@ -224,7 +225,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2664] [最高引用: 825] </h2>
+<h2>精选出版物 [总引用: 2669] [最高引用: 825] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
