--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by MICCAI, 2024.</td></tr>
 		<tr><td>One paper is accepted by Neural Networks, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ACM Computing Surveys, 2024.</td></tr>
@@ -192,7 +193,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2664] [Highest Citation: 825] </h2>
+<h2>Selected Publications [Total Citations: 2669] [Highest Citation: 825] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
