--- a/index_zw.html
+++ b/index_zw.html
@@ -121,6 +121,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ESWA, 2024.</td></tr>
 		<tr><td>一篇论文已被 MICCAI, 2024.</td></tr>
 		<tr><td>一篇论文已被 Neural Networks, 2024.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI, 2024.</td></tr> 
