--- a/index_zw.html
+++ b/index_zw.html
@@ -398,10 +398,10 @@
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising <font color="red">【最新】</font></a><br>
+		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022?dgcid=coauthor" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising <font color="red">【最新】</font></a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
 		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2023. <br>
-		<a href="", target="_blank">[论文]</a>
+		<a href="paper/NN_2024.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
