--- a/index_zw.html
+++ b/index_zw.html
@@ -268,7 +268,20 @@
 <h3>医学影像处理论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
-		<tr>	
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ESWA.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://authors.elsevier.com/sd/article/S0957-4174(24)01121-7" target="_blank">Few Sampling Meshes-based 3D Tooth Segmentation via Region-Aware Graph Convolutional Network<font color="red">【最新】</font></a><br>
+		Yang Zhao, Bodong Cheng, Najun Niu, Jun Wang, Tieyong Zeng, Guixu Zhang, Jun Shi, <b>Juncheng Li*</b>
+		<p><em>Expert Systems with Applications</em> (<i><b>ESWA</b></i>), 2024. <br>
+        <a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
 		<td width="206">
 		<img src="./indexpics/JBHI2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
