--- a/index_zw.html
+++ b/index_zw.html
@@ -127,9 +127,9 @@
 		<tr><td>一篇论文已被 Neural Networks, 2024.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 ACM Computing Surveys, 2024.</td></tr> 
-		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 CVPR, 2024.</td></tr> 
-		<tr><td>一篇论文已被 TMI, 2024.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMI, 2024.</td></tr> 
 		<tr><td>一篇论文已被 CIBM, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMI, 2023.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI, 2023.</td></tr> 
