--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 		<tr><td>One paper is accepted by Neural Networks, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ACM Computing Surveys, 2024.</td></tr>
-		<tr><td>One paper is accepted by TMI, 2024.</td></tr>
+		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CVPR, 2024.</td></tr>
-		<tr><td>One paper is accepted by TMI, 2024.</td></tr>
+		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2023.</td></tr>
@@ -127,9 +127,9 @@
 		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2021.</td></tr> 
 		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
-		<tr><td>One paper is accepted by IEEE, TMM 2021.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
 		<!-- <tr><td>One paper is accepted by ICME, 2021.</td></tr> 	 -->
-		<tr><td>One paper is accepted by IEEE, TCSVT 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TCSVT 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
 		<!-- <tr><td>One paper is accepted by IEEE Access, 2020.</td></tr>  -->
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
