--- a/index_zw.html
+++ b/index_zw.html
@@ -62,7 +62,8 @@
 
 <h2>简介</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b> 教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如：图像分割、目标检测）和图像处理（如：图像超分辨率、恶劣天气下的图像复原、医学影像处理）中的应用。我在知名的期刊和会议上已发表论文40余篇，包括ACM CS、TIP、TNNLS、TMM、TCSVT、TMI、JBHI、CVPR、ICCV、ECCV、AAAI、IJCAI、ACMMM、MICCAI。我曾获得2023年中国产学研合作创新成果一等奖、2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、ECCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际知名期刊/会议审稿人。
+	<!-- 我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b> 教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如：图像分割、目标检测）和图像处理（如：图像超分辨率、恶劣天气下的图像复原、医学影像处理）中的应用。我在知名的期刊和会议上已发表论文40余篇，包括ACM CS、TIP、TNNLS、TMM、TCSVT、TMI、JBHI、CVPR、ICCV、ECCV、AAAI、IJCAI、ACMMM、MICCAI。我曾获得2023年中国产学研合作创新成果一等奖、2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、ECCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际知名期刊/会议审稿人。 -->
+	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选2023年全球前2%顶尖科学家榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金项目、上海自然面上项目、上海市扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文40余篇（ESI高被引论文2篇）, 谷歌学术引用量超2900余次，其中单篇一作最高引用860余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV在内的多个国际期刊和会议审稿人。
 </p>
 
 <h2>近期新闻</h2>
@@ -426,10 +427,25 @@
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution <font color="red">【最新】</font> (<font color="red"><i><b>高被引论文</b></i></font>)</a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution <font color="red">【最新】</font> (<font color="red"><i><b>高被引论文, 24.05</b></i></font>)</a><br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文, 23.11, 24.01, 24.05, 24.07</b></i></font>)<br>
+		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
+		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
+		<a href="https://guangweigao.github.io/TMM22/FBSNet.html", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -444,21 +460,6 @@
 		<b>Juncheng Li</b>, Faming Fang*, Tieyong Zeng, Guixu Zhang, and Xizhao Wang
 		<p><em>Neurocomputing</em> (<i><b>NC</b></i>), 2022. <br>
 		<a href="paper/ASRN.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文</b></i></font>)<br>
-		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
-		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
-		<a href="https://guangweigao.github.io/TMM22/FBSNet.html", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
