--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2894] [Highest Citation: 861] </h2>
+<h2>Selected Publications [Total Citations: 2895] [Highest Citation: 861] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -863,6 +863,9 @@
 		</tr>
 		<tr>
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
+		</tr>
+		<tr>
+			<td> Medical Image Analysis </td>
 		</tr>
 		<tr>
 			<td> IEEE Journal of Biomedical and Health Informatics (JBHI)</td>
