--- a/index_zw.html
+++ b/index_zw.html
@@ -228,7 +228,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2894] [最高引用: 861] </h2>
+<h2>精选出版物 [总引用: 2895] [最高引用: 861] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
@@ -845,6 +845,9 @@
 		</tr>
 		<tr>
 			<td> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</td>
+		</tr>
+		<tr>
+			<td> Medical Image Analysis </td>
 		</tr>
 		<tr>
 			<td> IEEE Journal of Biomedical and Health Informatics (JBHI)</td>
