--- a/index_zw.html
+++ b/index_zw.html
@@ -122,18 +122,19 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇论文已被 IEEE TMI, 2024.</td></tr>
-		<tr><td>一篇论文已被 ESWA, 2024.</td></tr>
-		<tr><td>一篇论文已被 MICCAI, 2024.</td></tr>
-		<tr><td>一篇论文已被 Neural Networks, 2024.</td></tr> 
-		<tr><td>一篇论文已被 IEEE JBHI, 2024.</td></tr> 
-		<tr><td>一篇论文已被 ACM Computing Surveys, 2024.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMI, 2024.</td></tr> 
-		<tr><td>一篇论文已被 CVPR, 2024.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMI, 2024.</td></tr> 
-		<tr><td>一篇论文已被 CIBM, 2023.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMI, 2023.</td></tr> 
-		<tr><td>一篇论文已被 IEEE JBHI, 2023.</td></tr> 
+		<tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr>
+		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr>
+		<tr><td>一篇论文已被 ESWA接收, 2024.</td></tr>
+		<tr><td>一篇论文已被 MICCAI接收, 2024.</td></tr>
+		<tr><td>一篇论文已被 Neural Networks接收, 2024.</td></tr> 
+		<tr><td>一篇论文已被 IEEE JBHI接收, 2024.</td></tr> 
+		<tr><td>一篇论文已被 ACM Computing Surveys接收, 2024.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr> 
+		<tr><td>一篇论文已被 CVPR接收, 2024.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr> 
+		<tr><td>一篇论文已被 CIBM接收, 2023.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMI接收, 2023.</td></tr> 
+		<tr><td>一篇论文已被 IEEE JBHI接收, 2023.</td></tr> 
 		<tr><td>一篇综述已被 中国图象图形学报接收, 2023.</td></tr> 
 		<!-- <tr><td>一篇论文已被 CVIU接收, 2023.</td></tr>  -->
 		<!-- <tr><td>一篇论文已被 ACPR接收, 2023.</td></tr>  -->
