--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr>
+		<!-- <tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr> -->
 		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2024.</td></tr>
 		<tr><td>One paper is accepted by MICCAI, 2024.</td></tr>
@@ -196,7 +196,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 2984] [Highest Citation: 873] </h2>
+<h2>Selected Publications [Total Citations: 2991] [Highest Citation: 875] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
