--- a/index_zw.html
+++ b/index_zw.html
@@ -122,7 +122,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr>
+		<!-- <tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr> -->
 		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 ESWA接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 MICCAI接收, 2024.</td></tr>
@@ -229,7 +229,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 2984] [最高引用: 873] </h2>
+<h2>精选出版物 [总引用: 2991] [最高引用: 875] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
