--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE TIM, 2024.</td></tr>
 		<!-- <tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr> -->
 		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2024.</td></tr>
