--- a/index_zw.html
+++ b/index_zw.html
@@ -122,6 +122,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 IEEE TIM接收, 2024.</td></tr>
 		<!-- <tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr> -->
 		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 ESWA接收, 2024.</td></tr>
