--- a/index_zw.html
+++ b/index_zw.html
@@ -116,7 +116,7 @@
 	</li>
 </ul>
 
-<h2>论文接收情况</h2>
+<h2>精选论文接收情况</h2>
 <!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
 
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
@@ -230,7 +230,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3018] [最高引用: 876] </h2>
+<h2>精选出版物 [总引用: 3020] [最高引用: 876] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
@@ -665,7 +665,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：380+】</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：400+】</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
