--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </table>
 
 
-<h2>Papers</h2>
+<h2>Selected Papers</h2>
 <!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
 
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
@@ -197,7 +197,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3018] [Highest Citation: 876] </h2>
+<h2>Selected Publications [Total Citations: 3020] [Highest Citation: 876] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -684,7 +684,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot [Citations: 380+]</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot [Citations: 400+]</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
