--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<!-- <tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr> -->
 		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2024.</td></tr>
-		<tr><td>One paper is accepted by MICCAI, 2024.</td></tr>
+		<tr><td>One paper is accepted by MICCAI, 2024. (Oral)</td></tr>
 		<tr><td>One paper is accepted by Neural Networks, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ACM Computing Surveys, 2024.</td></tr>
@@ -198,7 +198,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3084] [Highest Citation: 880] </h2>
+<h2>Selected Publications [Total Citations: 3110] [Highest Citation: 880] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -424,6 +424,20 @@
 <h4>Selected Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/TCSVT2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/10654332" target="_blank">WeaFU: Weather-Informed Image Blind Restoration via Multi-Weather Distribution Diffusion<font color="red">【New】</font></a><br>
+		Bodong Cheng, <b>Juncheng Li*</b>, Jun Shi, Yingying Fang, Guixu Zhang, Yin Chen, Tieyong Zeng, and Zhi Li*
+		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>TCSVT</b></i>), 2024. <br>
+		<a href="paper/TCSVT2024.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
