--- a/index_zw.html
+++ b/index_zw.html
@@ -127,7 +127,7 @@
 		<!-- <tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr> -->
 		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 ESWA接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 MICCAI接收, 2024.</td></tr>
+		<tr><td>一篇论文已被 MICCAI接收, 2024 (Oral).</td></tr>
 		<tr><td>一篇论文已被 Neural Networks接收, 2024.</td></tr> 
 		<tr><td>一篇论文已被 IEEE JBHI接收, 2024.</td></tr> 
 		<tr><td>一篇论文已被 ACM Computing Surveys接收, 2024.</td></tr> 
@@ -231,7 +231,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3084] [最高引用: 880] </h2>
+<h2>精选出版物 [总引用: 3110] [最高引用: 880] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
@@ -412,6 +412,20 @@
 <h4>精选期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/TCSVT2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/10654332" target="_blank">WeaFU: Weather-Informed Image Blind Restoration via Multi-Weather Distribution Diffusion<font color="red">【最新】</font></a><br>
+		Bodong Cheng, <b>Juncheng Li*</b>, Jun Shi, Yingying Fang, Guixu Zhang, Yin Chen, Tieyong Zeng, and Zhi Li*
+		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>TCSVT</b></i>), 2024. <br>
+		<a href="paper/TCSVT2024.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
     <tr>	
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
