--- a/index_zw.html
+++ b/index_zw.html
@@ -122,6 +122,7 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 IEEE TMM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 IEEE TIM接收, 2024.</td></tr>
 		<!-- <tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr> -->
@@ -231,7 +232,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3110] [最高引用: 880] </h2>
+<h2>精选出版物 [总引用: 3128] [最高引用: 884] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
