--- a/index_zw.html
+++ b/index_zw.html
@@ -232,7 +232,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3128] [最高引用: 884] </h2>
+<h2>精选出版物 [总引用: 3131] [最高引用: 885] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
@@ -445,7 +445,7 @@
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution <font color="red">【最新】</font> (<font color="red"><i><b>高被引论文, 24.05</b></i></font>)</a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution <font color="red">【最新】</font> (<font color="red"><i><b>高被引论文, 24.05, 24.09</b></i></font>)</a><br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[论文]</a>
@@ -459,7 +459,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文, 23.11, 24.01, 24.05, 24.07</b></i></font>)<br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文, 23.11, 24.01, 24.05, 24.07, 24.09</b></i></font>)<br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
