--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3208] [Highest Citation: 898] </h2>
+<h2>Selected Publications [Total Citations: 3209] [Highest Citation: 898] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -286,6 +286,33 @@
 	<tbody>
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/MCFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/MCFN.pdf" target="_blank">Multimodal Co-attention Fusion Network with Online Data Augmentation for Cancer Subtype Classification<font color="red">【New】</font></a><br>
+		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, and Jun Shi
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI </b></i>), 2024. <br>
+        <a href="paper/MCFN.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/TGCN-ICF.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/MICCAI_2024.pdf" target="_blank">Topological GCN for Improving Detection of Hip Landmarks from B-Mode Ultrasound Images<font color="red">【New】</font></a><br>
+		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Jun Du, and Jun Shi
+		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI </b></i>), 2024. <br>
+		<font color="red">Top medical image processing conference.（Oral Presentation）</font><br>
+        <a href="paper/MICCAI_2024.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/ESWA.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://authors.elsevier.com/sd/article/S0957-4174(24)01121-7" target="_blank">Few Sampling Meshes-based 3D Tooth Segmentation via Region-Aware Graph Convolutional Network<font color="red">【New】</font></a><br>
@@ -301,10 +328,10 @@
 		<td width="206">
 		<img src="./indexpics/JBHI2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Involution Transformer based U-Net for Landmark Detection in Ultrasound Images for Diagnosis of Infantile DDH<font color="red">【New】</font></a><br>
+		<td> <a href="paper/JBHI_2024.pdf" target="_blank">Involution Transformer based U-Net for Landmark Detection in Ultrasound Images for Diagnosis of Infantile DDH<font color="red">【New】</font></a><br>
 		Tianxiang Huang, Jing Shi*, <b>Juncheng Li</b>, Jun Wang, Jun Du, Jun Shi*
 		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2024. <br>
-        <a href="", target="_blank">[Paper]</a>
+        <a href="paper/JBHI_2024.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
