--- a/index_zw.html
+++ b/index_zw.html
@@ -122,6 +122,8 @@
 <h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
+		<tr><td>一篇论文已被 IEEE TCSVT 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 IEEE TMM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 IEEE TIM接收, 2024.</td></tr>
