--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
+		<tr><td>One paper is accepted by IEEE TCSVT, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMM, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TIM, 2024.</td></tr>
