--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TCSVT, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMM, 2024.</td></tr>
@@ -201,7 +202,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3209] [Highest Citation: 898] </h2>
+<h2>Selected Publications [Total Citations: 3238] [Highest Citation: 902] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -707,7 +708,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. [Citations: 800+]</font><br>
+		<font color="red">Top computer vision conference. [Citations: 900+]</font><br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
