--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3382] [Highest Citation: 925] </h2>
+<h2>Selected Publications [Total Citations: 3384] [Highest Citation: 9254 </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
