--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify; text-justify:inter-ideograph;">
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation, object detection) and image processing (e.g., image super-resolution, image restoration under adverse weather, medical image processing). I have published more than 40 papers in top journals and conferences, including ACM Computing Survey, IEEE TIP\TNNLS\TMM\TCSVT\TMI, CVPR, ECCV, ICCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the first prize for Innovation Achievements in Industry-Academia-Research Cooperation in China 2023, the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including TPAMI, TIP,TNNLS, TMM, CVPR, ICCV, and ECCV.
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation, object detection) and image processing (e.g., image super-resolution, image restoration under adverse weather, medical image processing). I have published more than 50 papers in top journals and conferences, including ACM Computing Survey, IEEE TIP\TNNLS\TMM\TCSVT\TMI, CVPR, ECCV, ICCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the first prize for Innovation Achievements in Industry-Academia-Research Cooperation in China 2023, the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including TPAMI, TIP,TNNLS, TMM, CVPR, ICCV, and ECCV.
 </p>
 
 
@@ -202,7 +202,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3391] [Highest Citation: 924 </h2>
+<h2>Selected Publications [Total Citations: 3391] [Highest Citation: 924] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
