--- a/index_zw.html
+++ b/index_zw.html
@@ -69,6 +69,7 @@
 <h2>近期新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>我将担任 IJCAI-25 的程序委员会成员.</td></tr>
 		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2023.</td></tr>
@@ -235,7 +236,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3403] [最高引用: 930] </h2>
+<h2>精选出版物 [总引用: 3411] [最高引用: 931] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>精选综述</h4>
@@ -843,9 +844,12 @@
 	</tbody>
 </table>
 
-<h3>程序委员会成员 (PC)</h3>
+<h3>程序委员会成员 (PC member)</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
+			<tr>
+				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
+			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023, 2024.</a></td>
 			</tr>
