--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <h2>Recent News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>I will serve as a Program Committee Member for IJCAI-25.</td></tr>
 		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2023.</td></tr>
@@ -202,7 +203,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3403] [Highest Citation: 930] </h2>
+<h2>Selected Publications [Total Citations: 3411] [Highest Citation: 931] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <!-- <h4>Selected Preprint Papers</h4>
@@ -861,9 +862,12 @@
 	</tbody>
 </table>
 
-<h3>Program Committee Member</h3>
+<h3>Program Committee Member (PC member)</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
+			<tr>
+				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
+			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023, 2024.</a></td>
 			</tr>
